@@ -130,6 +130,7 @@ class ClientCache:
         elif o.end_tid is None:
             self.current[oid] = o.start_tid
         else:
+            assert o.start_tid < o.end_tid
             this_span = o.start_tid, o.end_tid
             span_list = self.noncurrent.get(oid)
             if span_list:
@@ -286,89 +287,90 @@ class ClientCache:
         self.fc.add(o)
 
     ##
-    # Mark the current data for oid as non-current.  If there is no
-    # current data for oid, do nothing.
+    # Remove all knowledge of noncurrent revisions of oid, both in
+    # self.noncurrent and in our FileCache.  `version` and `tid` are used
+    # only for trace records.
+    def _remove_noncurrent_revisions(self, oid, version, tid):
+        noncurrent_list = self.noncurrent.get(oid)
+        if noncurrent_list:
+            # Note:  must iterate over a copy of noncurrent_list.  The
+            # FileCache remove() calls our _evicted() method, and that
+            # mutates the list.
+            for old_tid, dummy in noncurrent_list[:]:
+                # 0x1E = invalidate (hit, discarding current or non-current)
+                self._trace(0x1E, oid, version, tid)
+                self.fc.remove((oid, old_tid))
+            del self.noncurrent[oid]
+
+    ##
+    # If `tid` is None, or we have data for `oid` in a (non-empty) version,
+    # forget all knowledge of `oid`.  (`tid` can be None only for
+    # invalidations generated by startup cache verification.)  If `tid`
+    # isn't None, we don't have version data for `oid`, and we had current
+    # data for `oid`, stop believing we have current data, and mark the
+    # data we had as being valid only up to `tid`.  In all other cases, do
+    # nothing.
     # @param oid object id
     # @param version name of version to invalidate.
-    # @param tid the id of the transaction that wrote a new revision of oid
+    # @param tid the id of the transaction that wrote a new revision of oid,
+    #        or None to forget all cached info about oid (version, current
+    #        revision, and non-current revisions)
     def invalidate(self, oid, version, tid):
-        if tid > self.fc.tid:
+        if tid > self.fc.tid and tid is not None:
             self.fc.settid(tid)
+
+        remove_all_knowledge_of_oid = tid is None
+
         if oid in self.version:
+            # Forget we know about the version data.
+            # 0x1A = invalidate (hit, version)
             self._trace(0x1A, oid, version, tid)
             dllversion, dlltid = self.version[oid]
             assert not version or version == dllversion, (version, dllversion)
             self.fc.remove((oid, dlltid))
-            # And continue on, we must also remove any non-version data
-            # from the cache.  This is a bit of a failure of the current
-            # cache consistency approach as the new tid of the version
-            # data gets confused with the old tid of the non-version data.
-            # I could sort this out, but it seems simpler to punt and
-            # have the cache invalidate too much for versions.
+            assert oid not in self.version # .remove() got rid of it
+            # And continue:  we must also remove any non-version data from
+            # the cache.  Or, at least, I have such a poor understanding of
+            # versions that anything less drastic would probably be wrong.
+            remove_all_knowledge_of_oid = True
 
-        if oid not in self.current:
+        if remove_all_knowledge_of_oid:
+            self._remove_noncurrent_revisions(oid, version, tid)
+
+        # Only current, non-version data remains to be handled.
+
+        cur_tid = self.current.get(oid)
+        if not cur_tid:
+            # 0x10 == invalidate (miss)
             self._trace(0x10, oid, version, tid)
             return
-        cur_tid = self.current.pop(oid)
 
-        # XXX.  During checkDisconnectedAbort, tid shows up as None here
-        # sometimes.
-        #
-        #if not cur_tid < tid:
-        #    print "OUCH1", cur_tid, tid
-        #    import traceback
-        #    traceback.print_stack()
-        #assert cur_tid < tid
-        #
-        # The stack trace.  oid is 1, version '', tid None:
-        #
-        #  File "C:\Python23\lib\threading.py", line 436, in __bootstrap
-        #    self.run()
-        #  File "C:\Code\ZODB3.3\build\lib.win32-2.3\ZEO\zrpc\client.py", line 293, in run
-        #    success = self.try_connecting(attempt_timeout)
-        #  File "C:\Code\ZODB3.3\build\lib.win32-2.3\ZEO\zrpc\client.py", line 324, in try_connecting
-        #    r = self._connect_wrappers(wrappers, deadline)
-        #  File "C:\Code\ZODB3.3\build\lib.win32-2.3\ZEO\zrpc\client.py", line 385, in _connect_wrappers
-        #    wrap.connect_procedure()
-        #  File "C:\Code\ZODB3.3\build\lib.win32-2.3\ZEO\zrpc\client.py", line 471, in connect_procedure
-        #    self.test_connection()
-        #  File "C:\Code\ZODB3.3\build\lib.win32-2.3\ZEO\zrpc\client.py", line 495, in test_connection
-        #    self.notify_client()
-        #  File "C:\Code\ZODB3.3\build\lib.win32-2.3\ZEO\zrpc\client.py", line 507, in notify_client
-        #    self.client.notifyConnected(self.conn)
-        #  File "C:\Code\ZODB3.3\build\lib.win32-2.3\ZEO\ClientStorage.py", line 516, in notifyConnected
-        #    self._wait_sync()
-        #  File "C:\Code\ZODB3.3\build\lib.win32-2.3\ZEO\ClientStorage.py", line 370, in _wait_sync
-        #    self._connection.pending(30)
-        #  File "C:\Code\ZODB3.3\build\lib.win32-2.3\ZEO\zrpc\connection.py", line 546, in pending
-        #    self.handle_read_event()
-        #  File "C:\Python23\lib\asyncore.py", line 390, in handle_read_event
-        #    self.handle_read()
-        #  File "C:\Code\ZODB3.3\build\lib.win32-2.3\ZEO\zrpc\smac.py", line 219, in handle_read
-        #    self.message_input(msg)
-        #  File "C:\Code\ZODB3.3\build\lib.win32-2.3\ZEO\zrpc\connection.py", line 244, in message_input
-        #    self.handle_request(msgid, flags, name, args)
-        #  File "C:\Code\ZODB3.3\build\lib.win32-2.3\ZEO\zrpc\connection.py", line 269, in handle_request
-        #    ret = meth(*args)
-        #  File "C:\Code\ZODB3.3\build\lib.win32-2.3\ZEO\tests\ConnectionTests.py", line 63, in endVerify
-        #    ClientStorage.endVerify(self)
-        #  File "C:\Code\ZODB3.3\build\lib.win32-2.3\ZEO\ClientStorage.py", line 1093, in endVerify
-        #    self._process_invalidations(InvalidationLogIterator(f))
-        #  File "C:\Code\ZODB3.3\build\lib.win32-2.3\ZEO\ClientStorage.py", line 1074, in _process_invalidations
-        #    self._cache.invalidate(oid, version, tid)
-        #  File "C:\Code\ZODB3.3\build\lib.win32-2.3\ZEO\cache.py", line 313, in invalidate
-        #    traceback.print_stack()
+        # We had current data for oid, but no longer.
 
+        if remove_all_knowledge_of_oid:
+            # 0x1E = invalidate (hit, discarding current or non-current)
+            self._trace(0x1E, oid, version, tid)
+            self.fc.remove((oid, cur_tid))
+            assert cur_tid not in self.current  # .remove() got rid of it
+            return
+
+        # Add the data we have to the list of non-current data for oid.
+        assert tid is not None and cur_tid < tid
+        # 0x1C = invalidate (hit, saving non-current)
+        self._trace(0x1C, oid, version, tid)
+        del self.current[oid]   # because we no longer have current data
+
+        # Update the end_tid half of oid's validity range on disk.
         # XXX Want to fetch object without marking it as accessed
         o = self.fc.access((oid, cur_tid))
         assert o is not None
         assert o.end_tid is None  # i.e., o was current
         if o is None:
             # XXX is this possible? (doubt it; added an assert just above)
-            return None
+            return
         o.end_tid = tid
         self.fc.update(o)   # record the new end_tid on disk
-        self._trace(0x1C, oid, version, tid)
+        # Add to oid's list of non-current data.
         L = self.noncurrent.setdefault(oid, [])
         bisect.insort_left(L, (cur_tid, tid))
 
@@ -943,7 +945,6 @@ class FileCache(object):
         if size > self.maxsize - ZEC3_HEADER_SIZE:
             return
 
-        assert size <= self.maxsize
         assert object.key not in self.key2entry
         assert len(object.key[0]) == 8
         assert len(object.key[1]) == 8
@@ -994,14 +995,16 @@ class FileCache(object):
 
         # XXX Or we could just keep the header in memory at all times.
 
-        e = self.key2entry.get(key)
+        e = self.key2entry.pop(key, None)
         if e is None:
             return
         offset = e.offset
         size, e2 = self.filemap[offset]
-        assert size >= 5  # only free blocks are tiny
+        assert e is e2
+        self.filemap[offset] = size, None
         self.f.seek(offset + OBJECT_HEADER_SIZE)
         o = Object.fromFile(self.f, key, skip_data=True)
+        assert size >= 5  # only free blocks are tiny
         # Because `size` >= 5, we can change an allocated block to a free
         # block just by overwriting the 'a' status byte with 'f' -- the
         # size field stays the same.
@@ -1009,7 +1012,6 @@ class FileCache(object):
         self.f.write('f')
         self.f.flush()
         self.parent._evicted(o)
-        self.filemap[offset] = size, None
 
     ##
     # Update on-disk representation of Object obj.
